data/pdf-generation: move main.pdf here; add latex files to generate main.pdf
# Last 3 commits:

# 08a3ad9 Fragen hinzugefügt 
# 13c95d1 commit snapshots 
# c70bd53 V0 WIP

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,21 @@ src/*.egg-info/*
 __pycache__
 output.py
 # snapshots/
+
+# tex related files
+*.log
+*.toc
+*.nav
+*.tex~
+*.aux
+*.bbl
+*.snm
+*.synctex.gz
+*.blg
+*.bcf
+*.run.xml
+*.out
+*.vrb
+*.tex.backup
+*.clo
+*.idx
