--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers=[
 
 
 [project.urls]
-Homepage = "..."
+# Homepage = "..."
 
 [project.scripts]
 stafo = "stafo.cli:main"
@@ -44,3 +44,7 @@ where = ["src"]
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
 version = {attr = "stafo.__version__"}
+
+# this siginificantly speeds up pytest
+[tool.pytest.ini_options]
+testpaths = ["tests"]
