--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,11 @@ final_response_list.md
 src/*.egg-info/*
 __pycache__
 output.py
-debug.py
+debug*.py
 output_no_error.py
+
+# dont commit the pickle file
+*.pcl
 
 # this for the auto-completion vs code extension
 .ac_candidates.txt
