some more tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,4 @@ version = {attr = "stafo.__version__"}
 # this siginificantly speeds up pytest
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+filterwarnings = ["error"]
