icon next to equation

--- a/html/config.cfg
+++ b/html/config.cfg
@@ -1,17 +1,17 @@
 \Preamble{xhtml,mathjax}
 \catcode`\:=11
 % wrap \[...\]
-\Configure{[]}{\ifvmode\IgnorePar\fi\EndP\HCode{<div class="mathjax">}\:HandleMathjaxCatcodes\catcode`\&=11\AltlDisplay}{\:RestoreMathjaxCatcodes\HCode{</div>}}
+\Configure{[]}{\ifvmode\IgnorePar\fi\EndP\HCode{<div class="mathjax equation">}\:HandleMathjaxCatcodes\catcode`\&=11\AltlDisplay}{\:RestoreMathjaxCatcodes\HCode{</div>}}
 % wrap $...$
-\Configure{$}{\HCode{<span class="mathjax">}\:HandleMathjaxCatcodes}{\:RestoreMathjaxCatcodes\HCode{</span>}}{\expandafter\AltMathOne}
+\Configure{$}{\HCode{<span class="mathjax inline">}\:HandleMathjaxCatcodes}{\:RestoreMathjaxCatcodes\HCode{</span>}}{\expandafter\AltMathOne}
 % wrap $$...$$
-\Configure{$$}{\ifvmode\IgnorePar\fi\EndP\HCode{<div class="mathjax">}\:HandleMathjaxCatcodes}{\:RestoreMathjaxCatcodes\HCode{</div>}}{\expandafter\AltlDisplayDollars}
+\Configure{$$}{\ifvmode\IgnorePar\fi\EndP\HCode{<div class="mathjax inline">}\:HandleMathjaxCatcodes}{\:RestoreMathjaxCatcodes\HCode{</div>}}{\expandafter\AltlDisplayDollars}
 % wrap \( ... \)
-\Configure{()}{\HCode{<span class="mathjax">}\:HandleMathjaxCatcodes\catcode`\&=11\AltlMath}{\:RestoreMathjaxCatcodes\HCode{</span>}}
+\Configure{()}{\HCode{<span class="mathjax inline">}\:HandleMathjaxCatcodes\catcode`\&=11\AltlMath}{\:RestoreMathjaxCatcodes\HCode{</span>}}
 \makeatletter
 % wrap AMS-like display environments; adds the environment name as a class
 \renewcommand\VerbMathToks[2]{%
-  \ifvmode\IgnorePar\fi\EndP\HCode{<div class="mathjax \@currenvir">}%
+  \ifvmode\IgnorePar\fi\EndP\HCode{<div class="mathjax equation">}%
     \alteqtoks{\begin{#2}#1\end{#2}}%
   \HCode{</div>}%
 }
